apps/base/gatus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatus
  labels:
    app.kubernetes.io/name: gatus
    app.kubernetes.io/part-of: homelab-monitoring
